Fix for bug 5762, wireshark asserts on reading juniper snoop output when no hex data is present (snoop detail off).

svn path=/trunk/; revision=36232